[gd_scene load_steps=7 format=2]

[ext_resource path="res://keyboard/Keyboard.gd" type="Script" id=1]
[ext_resource path="res://keyboard/left.png" type="Texture" id=2]
[ext_resource path="res://keyboard/right.png" type="Texture" id=3]
[ext_resource path="res://keyboard/up.png" type="Texture" id=4]
[ext_resource path="res://keyboard/down.png" type="Texture" id=5]
[ext_resource path="res://keyboard/fire.png" type="Texture" id=6]

[node name="Keyboard" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="btn_left" type="TextureButton" parent="."]
margin_left = 10.0
margin_top = 456.0
margin_right = 74.0
margin_bottom = 520.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 2 )

[node name="btn_right" type="TextureButton" parent="."]
margin_left = 150.0
margin_top = 456.0
margin_right = 214.0
margin_bottom = 520.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 3 )

[node name="btn_up" type="TextureButton" parent="."]
margin_left = 290.0
margin_top = 456.0
margin_right = 354.0
margin_bottom = 520.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 4 )

[node name="btn_down" type="TextureButton" parent="."]
margin_left = 430.0
margin_top = 456.0
margin_right = 494.0
margin_bottom = 520.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 5 )

[node name="btn_fire" type="TextureButton" parent="."]
margin_left = 880.0
margin_top = 456.0
margin_right = 944.0
margin_bottom = 520.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 6 )
[connection signal="pressed" from="btn_left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="btn_right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="btn_up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="btn_down" to="." method="_on_down_pressed"]
[connection signal="pressed" from="btn_fire" to="." method="_on_btn_fire_pressed"]
